k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-sb-app
  labels:
    app: simple-sb-app
  annotations:
    description: "This is an example deployment"
    owner: "hanke jiang"
    update: ddUPDATEME
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: simple-sb-app
  template:
    metadata:
      labels:
        app: simple-sb-app
      annotations:
        description: "This is an example deployment"
        owner: "hanke jiang"
        update: ddUPDATEME
    spec:
      terminationGracePeriodSeconds: 3600  # pod-level
      containers:
        - name: simple-sb-app
          image: jiangchengyu/simple-sb-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6060
          readinessProbe:
            httpGet:
              path: /hello
              port: 6060
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /hello
              port: 6060
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 2
            terminationGracePeriodSeconds: 60
#          startupProbe:
#            httpGet:
#              path: /hello
#              port: 6060
#            failureThreshold: 30
#            periodSeconds: 10
