k8s/service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: my-service
#spec:
#  selector:
#    app: simple-sb-app
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 6060
#  type: NodePort

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - port: 801
      targetPort: 6060
      protocol: TCP
      name: http
  selector:
    app: simple-sb-app
