k8s/service-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-service
spec:
  parentRefs:
    - name: gateway
      sectionName: http
  hostnames:
    - "sb.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hello
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: My-Overwrite-Header
                value: this-is-the-only-value
            add:
              - name: Accept-Encoding
                value: compress
              - name: My-cool-header
                value: this-is-an-appended-value
            remove:
              - User-Agent
      backendRefs:
        - name: my-service
          port: 801
